--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
         "@types/nprogress": "^0.2.0",
         "@types/react": "^17.0.15",
         "@types/react-dom": "^17.0.9",
-        "@types/react-lazy-load-image-component": "^1.5.2",
         "@types/react-redux": "^7.1.18",
         "@types/react-router-config": "^5.0.3",
         "@types/react-router-dom": "^5.1.8",
         "@types/redux-logger": "^3.0.9",
+        "add": "^2.0.6",
         "animate.css": "^4.1.1",
         "autoprefixer": "^9",
         "axios": "^0.21.1",
@@ -34,12 +34,13 @@
         "nprogress": "^0.2.0",
         "postcss": "^7",
         "protobufjs": "^6.11.2",
+        "qrcode.react": "^3.1.0",
+        "qs": "^6.11.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-helmet-async": "^1.0.9",
         "react-jss": "^10.7.1",
-        "react-lazy-load-image-component": "^1.5.1",
-        "react-qr-code": "^2.0.3",
+        "react-lazyload": "^3.2.0",
         "react-redux": "^7.2.4",
         "react-router-config": "^5.1.1",
         "react-router-dom": "^5.2.0",
@@ -48,7 +49,7 @@
         "react-use": "^17.3.2",
         "redux-logger": "^3.0.6",
         "redux-persist": "^6.0.0",
-        "swiper": "5.4.5",
+        "swiper": "^8.3.1",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat",
         "web-vitals": "^2.1.0",
         "workbox-background-sync": "^5.1.3",
@@ -62,7 +63,8 @@
         "workbox-range-requests": "^5.1.3",
         "workbox-routing": "^5.1.3",
         "workbox-strategies": "^5.1.3",
-        "workbox-streams": "^5.1.3"
+        "workbox-streams": "^5.1.3",
+        "yarn": "^1.22.19"
     },
     "scripts": {
         "start": "TAILWIND_MODE=watch dotenv -e .env.mdev  craco start",
@@ -87,7 +89,6 @@
         "@babel/preset-react": "^7.14.5",
         "@typescript-eslint/eslint-plugin": "^4.28.5",
         "@typescript-eslint/parser": "^4.28.5",
-        "craco-antd": "^1.19.0",
         "craco-less": "^2.0.0",
         "craco-plugin-scoped-css": "^1.1.1",
         "dotenv-cli": "^4.0.0",
@@ -105,7 +106,6 @@
         "husky": "^7.0.1",
         "lint-staged": "^11.1.1",
         "mrm": "^3.0.5",
-        "postcss-px-to-viewport": "^1.1.1",
         "prettier": "^2.3.2",
         "sass": "^1.36.0",
         "stylelint": "^13.13.1",
