--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
         "@types/react-router-config": "^5.0.3",
         "@types/react-router-dom": "^5.1.8",
         "@types/redux-logger": "^3.0.9",
-        "add": "^2.0.6",
         "animate.css": "^4.1.1",
         "autoprefixer": "^9",
         "axios": "^0.21.1",
@@ -63,8 +62,7 @@
         "workbox-range-requests": "^5.1.3",
         "workbox-routing": "^5.1.3",
         "workbox-strategies": "^5.1.3",
-        "workbox-streams": "^5.1.3",
-        "yarn": "^1.22.19"
+        "workbox-streams": "^5.1.3"
     },
     "scripts": {
         "start": "TAILWIND_MODE=watch dotenv -e .env.mdev  craco start",
